--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Daichi Kimura<dkimura@bdd.xyz>",
   "license": "MIT",
   "devDependencies": {
+    "devtron": "^1.4.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -16,6 +17,8 @@
     "eslint-plugin-react": "^6.10.3"
   },
   "dependencies": {
-    "electron": "^1.6.6"
+    "axios": "^0.16.1",
+    "electron": "^1.6.6",
+    "node-emoji": "^1.5.1"
   }
 }
