--- a/package.json
+++ b/package.json
@@ -4,21 +4,33 @@
   "description": "Change Slack Status on Touch Bar",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "build": "NODE_ENV=production webpack",
+    "start": "NODE_ENV=development webpack-dev-server",
+    "start:electron": "electron ."
   },
   "author": "Daichi Kimura<dkimura@bdd.xyz>",
   "license": "MIT",
   "devDependencies": {
+    "@webpack-blocks/babel6": "^0.4.1",
+    "@webpack-blocks/dev-server2": "^0.4.0",
+    "@webpack-blocks/webpack2": "^0.4.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "devtron": "^1.4.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3"
+    "eslint-plugin-react": "^6.10.3",
+    "webpack": "^2.5.1",
+    "webpack-blocks-html": "^1.3.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "axios": "^0.16.1",
     "electron": "^1.6.6",
-    "node-emoji": "^1.5.1"
+    "node-emoji": "^1.5.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
